# BaseObjectSwapperF4VR

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: PCH.h
src/: Manager.cpp  main.cpp
